style.css
/* ... */
.service-text p{
  font-size: 18px;
  color: #757575;
  font-family: "montserrat-bold", sans-serif;
  margin-top: 5%;
  margin-right: 10px;
}
@media(max-width:767px ){
  .service-icon,.service-text{
    text-align: center;
  }
}

/* section-3 */
.section-3{
  background: linear-gradient(#111111 0%, #111111 30%, #fff 30%, #fff 100%);
  padding-top: 10%;
  padding-bottom: 10%;
}
.section-3 .sec-2-para{
  color: #fff;
  font-weight: 600;
}
.section-3 .row {
  display: flex;
  flex-wrap: wrap;
}
.column{
  padding-top: 5%;
  flex: 50%;
  max-width: 50%;

}

.column img {
  width: 100%;
}

@media(max-width:602px ){
  .column{
    padding-top: 0px;
    flex: 80%;
    max-width: 80%;
    margin-right: 10%;
    margin-left: 10%;
  }
  .sec-2-para{
   font-size: 30px;
   padding-left: 3%;
   padding-right: 3%;
}
}

@media(max-width:414px ){
  .sec-2-para{
    font-weight: 800;
    font-size: 45px;
  }
}



/* section4 */
.section-4{
  padding-top: 10%;
  background-color: #e6e6e6;
}  
@media(max-width:768px ){
  .section-4 .sec-2-para{
    font-size: 25px;
  }
}

/* caurosel css */
.carousel-inner .carousel-item-content h1{
  color: #757575;
  font-size: 30px;
  margin: 0px 20px;
}
@media(max-width:768px ){
  .carousel-inner .carousel-item-content h1{
    font-size: 25px;
  }
}
@media(max-width:598px ){
  .carousel-inner .carousel-item-content h1{
    font-size: 20px;
  }
}
.carousel-item{
  margin-bottom: 10%;
}
.profile-img img{
  margin-top: 3%;
  border-radius: 50%;
  width: 100px;
  
}
.profile-title h3{
  margin-top: 3px;
  font-size: 15px;
  font-weight: 700;
}
.profile-title h5{
  color: #757575;
  margin-top: 3px;
  font-size: 14px;
  letter-spacing: 2px;
}
.owl-dots .owl-dot span {
  width: 15px;
  height: 15px;
  margin: 5px 7px;
  background: #869791;
  display: block;
 
  transition: opacity .2s ease;
  border-radius: 30px;
  
}
.profile-title{
  margin-bottom: 15%;
}
.owl-dots{
  text-align: center;
}
.owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
  background: #869791;
  
}
.owl-carousel .item img{
opacity: 0.6;

}
.owl-carousel .item img:hover{
  opacity: 1
  }

.carousel-control-next .fa{
  color: black;
  
  font-size: 30px
}
.carousel-control-prev .fa{
  color: black;
  font-size: 30px;
}

.indicators .fa{
  color: #757575;
}
.indicators{
  text-align: center;
}

/* section5 */
.section-5{
  padding-top: 10%;
  background-image: url('images/contact-bg.jpg');
}
.section-5 .sec-2-para{
  color: #fff;
}
.section-5 .contact-content h3{
  color: #fff;
  text-transform: uppercase;
  font-size: 13px;
  letter-spacing: 2px;
  font-weight: 700;
  margin-top: 5%;
}
.form-group input,.form-group textarea{
  background-color: transparent;
  border: none;
  width: 100%;
  border-bottom: 1px solid rgba(255, 255, 255, 0.07);
  padding: 1.5rem 0;
}
.form-group input:focus,.form-group textarea:focus{
  background-color: transparent;
  border-bottom: 1px solid #39b54a;
  box-shadow: none;
}
.form-group .form-control::placeholder {
  color: #757575; /* Set the placeholder color */
}
.btn-submit{
  margin-top: 5%;
  width: 90%;
}
.section-5 button {
  padding: 15px;
  border-radius: 0%;
}
.contact-content{
  margin-left: 40px;
}
.section-5 .col-md-4{
  background-color: #111111;
  opacity: 0.9;
}
.section-5 .col-md-8{
  background-color: #111111;
  opacity: 0.7;
}
.address-content h4,.email-content h4,.call-content h4{
  color: #39b54a;
  font-size: 16px;
  margin-top: 5%;
  font-weight: 600;
}
.address-content h5,.email-content h5,.call-content h5{
  color: #757575;
  font-size: 15px;
  
}
.address-content,.email-content,.call-content{
  padding-top: 10%;
}
.section-5 .social-icons{
  margin-left: 10%;
  margin-bottom: 5%;
}
.section-5 .social-icons .fa{
  color: #fff;
}

@media(max-width:578px ){
  .section-5 .sec-2-para{
    font-size: 30px;
  }
}
@media(max-width:767px ){
 
  .contact-content h3{
    display: none;
  }
  .contact-content{
    margin-left: 0px;
  }
  .section-5 .social-icons{
    margin-left: 0%;
    margin-bottom: 25%;
  }
  .section-5 .col-md-4{
    opacity: 0.7;
  }
}
@media(max-width:602px ){
  .section-5 .col-md-4{
    text-align: center;
  }
}

/* footer */
.footer-section{
  background-color: #111111;
  padding-top: 10%;
  z-index: 9;
  
}

.footer-section h3{
  color: #39b54a;
  font-size: 40px;
}
.footer-section h4{
  color: #fff;
}
.footer-section p{
  color: #757575;
  line-height: 1.9;
}
.footer-section input{

  border-bottom: none;
  background: rgba(0, 0, 0, 0.1);
  padding: 5%;
  border-left: none;
  border-top: none;
}
.footer-section input:focus{
  background-color: transparent;
  box-shadow: none;
}

.footer-section .input-group-text{
  background-color: #111111;
  border: none;
  background: rgba(0, 0, 0, 0.1);
}
.form-group {
  /* Set the desired width for the container */
  width: 400px;
}

.input-group-append .btn{
  padding: 0 40px;
  color: #fff;
  background-color: #39b54a;
  font-family: "montserrat-medium", sans-serif;
  font-size: 15px;
  width: 100%;
}

.footer-section .fa{
  font-size:25px;
  color: #fff;
}
.footer-copyright .author-name{
  margin-left: 10px;
}

.scroll-top .fa{
  color: #fff;
  background-color: black;
}

.scroll-top {
  width: 60px;
  height: 60px;
  text-align: center;
  line-height: 35px;
  font-size: 20px;
  color: #fff;
  position: fixed;
  bottom: 30px;
  right: 30px;
  z-index: 9;
  cursor: pointer;
  
}
.scroll-top a{
  text-decoration: none;
}
.scroll-top i{
  border-radius: 10%;
  padding: 12px 18px;
  border: none;
}
/* ... */

